# syllogi

./: .dockerignore  .gitignore  .gitmodules  .releaserc.json  Dockerfile  LICENSE  README.md  docker-compose.example.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh
backend/: .gitignore  Dockerfile  app.py  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 07c0ac966e87_add_enable_download_to_playlist.py  160b7f57fb16_create_playlist_table.py  2adb717c17b3_rename_enabled_to_enable_sync.py  3156ac7e280d_add_mixed_to_recommendationstrategy.py  429a26cd4a74_create_recommendation_model.py  4d9b252b3b9d_add_oauthid_to_user.py  4de9602bbcfa_add_image_url_to_download_session.py  5xuo84yj9j0h_add_lastfm_username_to_musicserveruser.py  701271051759_initial_migration.py  7bed13ea712a_create_recommendation_model.py  7bf06f897ad4_create_music_server_user_model.py  7e79d4942139_add_existed_to_download_session_status.py  81dbaf4c3f74_set_username_unique_and_create_index_.py  94a6b629597a_remove_unique_username_from_.py  a1b2c3d4e5f6_add_download_session_table.py  a2dfc8f0e0e3_add_blend_users_to_recommendation.py  a347w9rzl2qk_drop_lastfm_username_from_recommendation_and_migrate_blend_users.py  b1e2f3a4c5d6_add_is_public_to_recommendation.py  bb72f147f270_create_user_table.py  be27cd17b487_initial_setup.py  bfa06947f1f7_alter_notification_fields.py  (+11 more)
backend/db/: download_session.py  import_session.py  music_server_user.py  notification.py  playlist.py  recommendation.py  recommendation_session.py  session.py  sync.py  sync_session.py  user.py
backend/lib/: auth.py  authentik.py  cache.py  common.py  constants.py  cron.py  crypto.py  db.py  download.py  downloader.py  env.py  jellyfin.py  lastfm.py  lidarr.py  musicbrainz.py  notification.py  recommendation.py  slskd.py  spotify.py  sync.py  tagger.py  track.py  utils.py  youtube.py
backend/models/: notification.py
backend/routes/: __init__.py  auth.py  charts.py  cron.py  health.py  import_session.py  jellyfin.py  notification.py  oauth.py  playlist.py  recommendation.py  recommendation_session.py  settings.py  spotify.py  sync.py  sync_session.py  track.py  user.py  users.py  youtube.py
backend/scripts/: yt-dlp.py
(+123 files in other folders)
