[project]
name = "syllogi"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic",
    "apscheduler",
    "fastapi[standard]",
    "httpx",
    "psycopg[binary,pool]",
    "pytz",
    "pyjwt",
    "python-dotenv",
    "python-multipart",
    "requests",
    "sqlmodel",
    "uvicorn[standard]",
    "yt-dlp",
    "spotapi[websocket,redis,pymongo]",
    "pwdlib[argon2]>=0.3.0",
]

[tool.uv.sources]
# spotapi = { path = "SpotAPI", editable = true }
spotapi = { git = "https://github.com/Aran404/SpotAPI.git" }

[dependency-groups]
dev = [
    "black",
    "ruff",
]

[tool.ruff]
extend-exclude = ["SpotAPI"]

[tool.basedpyright]
typeCheckingMode = "basic"
extraPaths = ["SpotAPI"]
