[project]
name = "syllogi"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic",
    "apscheduler",
    "fastapi[standard]",
    "httpx",
    "psycopg[binary,pool]",
    "pytz",
    "pyjwt",
    "python-dotenv",
    "python-multipart",
    "requests",
    "sqlmodel",
    "uvicorn[standard]",
    "yt-dlp==2026.6.9",
    "spotapi[websocket,redis,pymongo]",
    "pwdlib[argon2]>=0.3.0",
    "cryptography",
]

[tool.uv.sources]
# spotapi = { path = "SpotAPI", editable = true }
spotapi = { git = "https://github.com/Aran404/SpotAPI.git" , rev = "4ebb81d" }

[dependency-groups]
dev = [
    "black",
    "ruff",
]

[tool.ruff]
extend-exclude = ["SpotAPI"]

[tool.basedpyright]
typeCheckingMode = "basic"
extraPaths = ["SpotAPI"]
